Update: KITTI dataset compatibility.

--- a/experiments/cfgs/faster_rcnn_end2end_voc07_VGG16.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_voc07_VGG16.yml
@@ -29,6 +29,16 @@ TRAIN:
   RPN_BATCHSIZE: 256
   PROPOSAL_METHOD: gt
   BG_THRESH_LO: 0.0
+  
+  # Default 600
+  SCALES: [1200] 
+  # Default 1000
+  MAX_SIZE: 2000
 
 TEST:
   HAS_RPN: True
+  
+  # Default 600
+  SCALES: [1200] 
+  # Default 1000
+  MAX_SIZE: 2000
