--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
@@ -1,4 +1,4 @@
-EXP_DIR: scale2x_10x7_stepsize_100k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
+EXP_DIR: scale2x_kmeans70_stepsize_100k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: initialized_with_pascal_voc_final_model
 
 SOLVER:
@@ -17,6 +17,7 @@ SOLVER:
 NET:
   NUM_CLASSES: 4
   NUM_ANCHORS: 70
+  KMEANS_ANCHOR: True         # Data-driven anchors
 
 TRAIN:
   SNAPSHOT_ITERS: 2000
