--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ResNet50.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ResNet50.yml
@@ -1,14 +1,14 @@
-EXP_DIR: scale1x_kmeans70_flip_crop_gamma_stepsize_60k_maxiter_100k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
+EXP_DIR: scale2x_kmeans70_flip_crop_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: faster_rcnn_end2end
 
 SOLVER:
   BASE_LR: 0.001
   DISPLAY: 20
   AVERAGE_LOSS: 100
-  SNAPSHOT_PREFIX: alexnet
+  SNAPSHOT_PREFIX: resnet50
   ITER_SIZE: 2
-  STEPSIZE: 60000
-  MAX_ITER: 100000
+  STEPSIZE: 50000
+  MAX_ITER: 70000
   TEST_ITER: 50
   TEST_INTERVAL: 100
   TEST_COMPUTE_LOSS: "true"
@@ -33,7 +33,7 @@ TRAIN:
     CROP: True
     GAMMA: True
 
-# scale1x
+  # scale1x
   SCALES: [375]
   MAX_SIZE: 1500
 
