--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
@@ -1,4 +1,5 @@
-EXP_DIR: scale2x_kmeans70_stepsize_100k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
+EXP_DIR: scale1x_kmeans70_flip_crop_gamma_stepsize_60k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
+#EXP_DIR: scale2x_kmeans70_stepsize_100k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: initialized_with_pascal_voc_final_model
 
 SOLVER:
@@ -8,7 +9,7 @@ SOLVER:
   AVERAGE_LOSS: 100
   SNAPSHOT_PREFIX: zf
   ITER_SIZE: 2
-  STEPSIZE: 100000
+  STEPSIZE: 60000
   MAX_ITER: 140000
   TEST_ITER: 50
   TEST_INTERVAL: 100
@@ -17,7 +18,7 @@ SOLVER:
 NET:
   NUM_CLASSES: 4
   NUM_ANCHORS: 70
-  KMEANS_ANCHOR: True         # Data-driven anchors
+  KMEANS_ANCHOR: False         # Data-driven anchors
 
 TRAIN:
   SNAPSHOT_ITERS: 2000
@@ -31,24 +32,24 @@ TRAIN:
   
   USE_AUGMENTATION:
     FLIP: True
-    CROP: False
-    GAMMA: False
+    CROP: True
+    GAMMA: True
   
   # scale1x
-  #SCALES: [375]
-  #MAX_SIZE: 1500
+  SCALES: [375]
+  MAX_SIZE: 1500
 
   # scale2x
-  SCALES: [755]
-  MAX_SIZE: 2500
+  #SCALES: [755]
+  #MAX_SIZE: 2500
 
 TEST:
   HAS_RPN: True
 
   # scale1x
-  #SCALES: [375]
-  #MAX_SIZE: 1500
+  SCALES: [375]
+  MAX_SIZE: 1500
 
   # scale2x
-  SCALES: [755]
-  MAX_SIZE: 2500
+  #SCALES: [755]
+  #MAX_SIZE: 2500
