--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ResNet50.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ResNet50.yml
@@ -1,4 +1,4 @@
-EXP_DIR: scale2x_kmeans70_flip_crop_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
+EXP_DIR: scale2x_without_test_kmeans70_flip_crop_gamma_stepsize_100k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: faster_rcnn_end2end
 
 SOLVER:
@@ -7,11 +7,17 @@ SOLVER:
   AVERAGE_LOSS: 100
   SNAPSHOT_PREFIX: resnet50
   ITER_SIZE: 2
-  STEPSIZE: 50000
-  MAX_ITER: 70000
-  TEST_ITER: 50
-  TEST_INTERVAL: 100
-  TEST_COMPUTE_LOSS: "true"
+  STEPSIZE: 100000
+  MAX_ITER: 140000
+  # TEST_ITER: 50
+  # TEST_INTERVAL: 100
+  # TEST_COMPUTE_LOSS: "true"
+
+  # Without test phase, to save memory for large image inputs
+  TEST_ITER: 0
+  TEST_INTERVAL: 0
+  TEST_COMPUTE_LOSS: "false"
+  TEST_INITIALIZATION: "false"
 
 NET:
   NUM_CLASSES: 4
@@ -34,20 +40,20 @@ TRAIN:
     GAMMA: True
 
   # scale1x
-  SCALES: [375]
-  MAX_SIZE: 1500
+  # SCALES: [375]
+  # MAX_SIZE: 1500
 
   # scale2x
-  #SCALES: [755]
-  #MAX_SIZE: 2500
+  SCALES: [755]
+  MAX_SIZE: 2500
 
 TEST:
   HAS_RPN: True
 
   # scale1x
-  SCALES: [375]
-  MAX_SIZE: 1500
+  # SCALES: [375]
+  # MAX_SIZE: 1500
 
   # scale2x
-  #SCALES: [755]
-  #MAX_SIZE: 2500
+  SCALES: [755]
+  MAX_SIZE: 2500
