--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF_depth.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF_depth.yml
@@ -1,6 +1,9 @@
-EXP_DIR: scale1x_kmeans70_flip_crop_gamma_stepsize_70k_maxiter_100k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
+EXP_DIR: scale2x_kmeans20_flip_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
+#EXP_DIR: scale1x_kmeans70_flip_crop_gamma_stepsize_70k_maxiter_100k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: scale2x_kmeans70_stepsize_100k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: initialized_with_pascal_voc_final_model
+
+INPUT: ['image', 'depth']
 
 SOLVER:
   BASE_LR: 0.001
@@ -9,16 +12,18 @@ SOLVER:
   AVERAGE_LOSS: 100
   SNAPSHOT_PREFIX: zf
   ITER_SIZE: 2
-  STEPSIZE: 70000
-  MAX_ITER: 100000
+  STEPSIZE: 50000
+  MAX_ITER: 70000
+
   TEST_ITER: 50
-  TEST_INTERVAL: 100
+  TEST_INTERVAL: 100  
   TEST_COMPUTE_LOSS: "true"
+  TEST_INITIALIZATION: "true"
 
 NET:
   NUM_CLASSES: 4
-  NUM_ANCHORS: 70
-  KMEANS_ANCHOR: False         # Data-driven anchors
+  NUM_ANCHORS: 20
+  KMEANS_ANCHOR: True         # Data-driven anchors
 
 TRAIN:
   SNAPSHOT_ITERS: 2000
@@ -32,24 +37,24 @@ TRAIN:
   
   USE_AUGMENTATION:
     FLIP: True
-    CROP: True
+    CROP: False
     GAMMA: True
   
   # scale1x
-  SCALES: [375]
-  MAX_SIZE: 1500
+  # SCALES: [375]
+  # MAX_SIZE: 1500
 
   # scale2x
-  #SCALES: [755]
-  #MAX_SIZE: 2500
+  SCALES: [755]
+  MAX_SIZE: 2500
 
 TEST:
   HAS_RPN: True
 
   # scale1x
-  SCALES: [375]
-  MAX_SIZE: 1500
+  # SCALES: [375]
+  # MAX_SIZE: 1500
 
   # scale2x
-  #SCALES: [755]
-  #MAX_SIZE: 2500
+  SCALES: [755]
+  MAX_SIZE: 2500
