Test Ped/Cyc 2 class detection.

--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
@@ -1,4 +1,5 @@
-EXP_DIR: newImdb_augment_PedCyc2x_scale4x_kmeans20_flip_gamma_stepsize_50k_maxiter_70k_person_sitting_van_imdb_hRng20_occ012_trunc0.5
+EXP_DIR: newImdb_2Cls_PedCyc_Only_scale2x_kmeans20_flip_gamma_stepsize_50k_maxiter_70k_person_sitting_imdb_hRng20_occ012_trunc0.5
+# EXP_DIR: newImdb_augment_PedCyc2x_scale4x_kmeans20_flip_gamma_stepsize_50k_maxiter_70k_person_sitting_van_imdb_hRng20_occ012_trunc0.5
 # EXP_DIR: scale1x_kmeans20_flip_crop_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 # EXP_DIR: scale1x_kmeans70_flip_crop_gamma_stepsize_70k_maxiter_100k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: scale2x_kmeans70_stepsize_100k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
