--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
@@ -44,6 +44,7 @@ TRAIN:
     FLIP: True
     CROP: False
     GAMMA: True
+    IM_SCALES: [0.25, 0.5, 0.75, 1.0, 1.25, 1.5]
   
   # scale1x
   # SCALES: [375]
