--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
@@ -1,4 +1,5 @@
-EXP_DIR: newImdb_augment_PedCyc2x_scale4x_kmeans20_flip_gamma_stepsize_50k_maxiter_70k_person_sitting_van_imdb_hRng20_occ012_trunc0.5
+EXP_DIR: all_in_one_baselr_0.001_PedCyc2x_scale2x_kmeans20_flip_gamma_stepsize_100k_maxiter_150k_person_sitting_van_imdb_hRng20_occ012_trunc0.5
+# EXP_DIR: newImdb_augment_PedCyc2x_scale4x_kmeans20_flip_gamma_stepsize_50k_maxiter_70k_person_sitting_van_imdb_hRng20_occ012_trunc0.5
 # EXP_DIR: scale1x_kmeans20_flip_crop_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 # EXP_DIR: scale1x_kmeans70_flip_crop_gamma_stepsize_70k_maxiter_100k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: scale2x_kmeans70_stepsize_100k_maxiter_140k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
@@ -8,20 +9,21 @@ INPUT: ['image']
 #INPUT: ['image', 'depth']
 
 SOLVER:
+  #BASE_LR: 0.001
   BASE_LR: 0.001
 
   DISPLAY: 20
   AVERAGE_LOSS: 100
   SNAPSHOT_PREFIX: zf
   ITER_SIZE: 2
-  STEPSIZE: 50000
-  MAX_ITER: 70000
+  STEPSIZE: 100000
+  MAX_ITER: 150000
   
-  TEST_ITER: 50
+  TEST_ITER: 500
   # TEST_INTERVAL: 100
   # TEST_ITER: 0
-  TEST_INTERVAL: 0
-  TEST_COMPUTE_LOSS: "false"
+  TEST_INTERVAL: 3000
+  TEST_COMPUTE_LOSS: "true"
   TEST_INITIALIZATION: "false"
 
 NET:
@@ -30,7 +32,7 @@ NET:
   KMEANS_ANCHOR: True         # Data-driven anchors
 
 TRAIN:
-  SNAPSHOT_ITERS: 2000
+  SNAPSHOT_ITERS: 5000  
   # SNAPSHOT_ITERS: 20
   HAS_RPN: True
   IMS_PER_BATCH: 1
