--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF_depth.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF_depth.yml
@@ -9,6 +9,7 @@ INPUT: ['image', 'depth']
 
 SOLVER:
   BASE_LR: 0.001
+  #BASE_LR: 0.0001
 
   DISPLAY: 20
   AVERAGE_LOSS: 100
@@ -19,8 +20,10 @@ SOLVER:
 
   # TEST_ITER: 50
   # TEST_INTERVAL: 100  
+  # TEST_ITER: 500
   TEST_ITER: 500
-  TEST_INTERVAL: 3000
+  TEST_INTERVAL: 1000
+  #TEST_INTERVAL: 3000
   TEST_COMPUTE_LOSS: "true"
   TEST_INITIALIZATION: "true"
 
