--- a/experiments/cfgs/faster_rcnn_end2end_kitti_VGG16_depth.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_VGG16_depth.yml
@@ -2,7 +2,7 @@ EXP_DIR: scale2x_PedCyc2x_50k120k_person_sitting_van_truck_imdb_hRng10_occ012_tr
 #EXP_DIR: scale2x_kmeans70_flip_crop_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: faster_rcnn_end2end
 
-INPUT: ['image']
+INPUT: ['image', 'depth']
 
 SOLVER:
   BASE_LR: 0.001
@@ -13,16 +13,16 @@ SOLVER:
   STEPSIZE: 50000
   MAX_ITER: 120000
   
-  TEST_ITER: 50
-  TEST_INTERVAL: 100
-  TEST_COMPUTE_LOSS: "true"
-  TEST_INITIALIZATION: "true"
+  # TEST_ITER: 50
+  # TEST_INTERVAL: 100
+  # TEST_COMPUTE_LOSS: "true"
+  # TEST_INITIALIZATION: "true"
 
   # # Without test phase, to save memory for large image inputs
-  # TEST_ITER: 0
-  # TEST_INTERVAL: 0
-  # TEST_COMPUTE_LOSS: "false"
-  # TEST_INITIALIZATION: "false"
+  TEST_ITER: 50
+  TEST_INTERVAL: 0
+  TEST_COMPUTE_LOSS: "false"
+  TEST_INITIALIZATION: "false"
 
 NET:
   NUM_CLASSES: 4
