--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF_depth.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF_depth.yml
@@ -22,10 +22,10 @@ SOLVER:
   # TEST_INTERVAL: 100  
   # TEST_ITER: 500
   TEST_ITER: 500
-  TEST_INTERVAL: 1000
-  #TEST_INTERVAL: 3000
-  TEST_COMPUTE_LOSS: "true"
-  TEST_INITIALIZATION: "true"
+  #TEST_INTERVAL: 1000
+  TEST_INTERVAL: 0
+  TEST_COMPUTE_LOSS: "false"
+  TEST_INITIALIZATION: "false"
 
 NET:
   NUM_CLASSES: 4
