RGB+Edge, VGG16_c4

--- a/experiments/cfgs/faster_rcnn_end2end_kitti_VGG16_c4_edge.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_VGG16_c4_edge.yml
@@ -7,6 +7,7 @@ INPUT: ['image', 'edge']
 SOLVER:
   BASE_LR: 0.001
   DISPLAY: 20
+  # DISPLAY: 1
   AVERAGE_LOSS: 100
   SNAPSHOT_PREFIX: vgg16
   ITER_SIZE: 2
