--- a/experiments/cfgs/faster_rcnn_end2end_kitti_VGG16_c4.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_VGG16_c4.yml
@@ -1,4 +1,4 @@
-EXP_DIR: conv4_pool2x_scale2x_PedCyc2x_200k300k_person_sitting_van_truck_imdb_hRng10_occ012_trunc0.5
+EXP_DIR: drop0.5_conv4_pool2x_scale2x_PedCyc2x_200k300k_person_sitting_van_truck_imdb_hRng10_occ012_trunc0.5
 #EXP_DIR: scale2x_kmeans70_flip_crop_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: faster_rcnn_end2end
 
