--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF.yml
@@ -1,4 +1,4 @@
-EXP_DIR: mAP_Test_80k200k
+EXP_DIR: drop0.5_pool2x_scale2x_70k150k
 # EXP_DIR: all_in_one_baselr_0.001_PedCyc2x_scale2x_kmeans20_flip_gamma_stepsize_100k_maxiter_150k_person_sitting_van_imdb_hRng20_occ012_trunc0.5
 # EXP_DIR: newImdb_augment_PedCyc2x_scale4x_kmeans20_flip_gamma_stepsize_50k_maxiter_70k_person_sitting_van_imdb_hRng20_occ012_trunc0.5
 # EXP_DIR: scale1x_kmeans20_flip_crop_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
@@ -10,21 +10,21 @@ INPUT: ['image']
 #INPUT: ['image', 'depth']
 
 SOLVER:
-  #BASE_LR: 0.001
-  BASE_LR: 0.001
+  BASE_LR: 0.0004
+  #BASE_LR: 0.002
 
   DISPLAY: 20
   AVERAGE_LOSS: 100
   SNAPSHOT_PREFIX: zf
   ITER_SIZE: 2
-  STEPSIZE: 80000
-  MAX_ITER: 200000
+  STEPSIZE: 70000
+  MAX_ITER: 150000
   
-  TEST_ITER: 500
+  TEST_ITER: 50
   # TEST_INTERVAL: 100
-  # TEST_ITER: 0
-  TEST_INTERVAL: 1000
-  TEST_COMPUTE_LOSS: "true"
+  TEST_INTERVAL: 0
+  # TEST_INTERVAL: 1000
+  TEST_COMPUTE_LOSS: "false"
   TEST_INITIALIZATION: "false"
 
 NET:
@@ -33,7 +33,8 @@ NET:
   KMEANS_ANCHOR: True         # Data-driven anchors
 
 TRAIN:
-  SNAPSHOT_ITERS: 5000  
+  # SNAPSHOT_ITERS: 5000  
+  SNAPSHOT_ITERS: 10000
   # SNAPSHOT_ITERS: 20
   HAS_RPN: True
   IMS_PER_BATCH: 1
@@ -47,15 +48,18 @@ TRAIN:
     FLIP: True
     CROP: False
     GAMMA: True
-    IM_SCALES: [0.25, 0.5, 0.75, 1.0, 1.25, 1.5]
+    # IM_SCALES: [1.0]
+    #IM_SCALES: [0.25, 0.5, 0.75, 1.0, 1.25, 1.5]
   
   # scale1x
   # SCALES: [375]
   # MAX_SIZE: 1500
 
   # scale2x
-  SCALES: [755]
-  MAX_SIZE: 2500
+  SCALES: [90, 180, 270, 360, 450, 540, 630, 720, 810, 900]
+  MAX_SIZE: 3000
+  # SCALES: [755]
+  # MAX_SIZE: 2500
 
   # scale4x
   # SCALES: [1510]
