--- a/experiments/cfgs/faster_rcnn_end2end_kitti_ZF_depth.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_kitti_ZF_depth.yml
@@ -1,4 +1,5 @@
-EXP_DIR: RGB_DEPTH2_Multiscale_100k150k
+EXP_DIR: drop0.5_pool2x_scale2x_70k150k
+#EXP_DIR: RGB_DEPTH2_Multiscale_100k150k
 # EXP_DIR: rawImdb_PedCyc2x_depth0_velo_scale2x_kmeans20_flip_gamma_stepsize_100k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: scale2x_kmeans20_flip_gamma_stepsize_50k_maxiter_70k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
 #EXP_DIR: scale1x_kmeans70_flip_crop_gamma_stepsize_70k_maxiter_100k_person_sitting_van_truck_imdb_hRng20_occ012_trunc0.5
@@ -8,14 +9,14 @@ EXP_DIR: RGB_DEPTH2_Multiscale_100k150k
 INPUT: ['image', 'depth']
 
 SOLVER:
-  BASE_LR: 0.001
+  BASE_LR: 0.0004
   #BASE_LR: 0.0001
 
   DISPLAY: 20
   AVERAGE_LOSS: 100
   SNAPSHOT_PREFIX: zf
   ITER_SIZE: 2
-  STEPSIZE: 100000
+  STEPSIZE: 70000
   MAX_ITER: 150000
 
   # TEST_ITER: 50
@@ -33,7 +34,7 @@ NET:
   KMEANS_ANCHOR: True         # Data-driven anchors
 
 TRAIN:
-  SNAPSHOT_ITERS: 5000
+  SNAPSHOT_ITERS: 10000
   HAS_RPN: True
   IMS_PER_BATCH: 1
   BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
@@ -46,15 +47,19 @@ TRAIN:
     FLIP: True
     CROP: False
     GAMMA: True
-    IM_SCALES: [0.25, 0.5, 0.75, 1.0, 1.25, 1.5]
+    #IM_SCALES: [0.25, 0.5, 0.75, 1.0, 1.25, 1.5]
     
   # scale1x
   # SCALES: [375]
   # MAX_SIZE: 1500
 
   # scale2x
-  SCALES: [755]
-  MAX_SIZE: 2500
+  SCALES: [90, 180, 270, 360, 450, 540, 630, 720, 810, 900]
+  MAX_SIZE: 3000
+
+  # # scale2x
+  # SCALES: [755]
+  # MAX_SIZE: 2500
 
   # scale4x
   # SCALES: [1510]
